syntax = "proto3";

option csharp_namespace = "HireFire.Grpc";

service JobListingService {
  rpc CreateJobListing (CreateJobListingRequest) returns (JobListingResponse);

  rpc RemoveJobListing (RemoveJobListingRequest) returns (RemoveJobListingResponse);

  rpc GetJobListingsForCompany (GetJobListingsForCompanyRequest)
      returns (GetJobListingsForCompanyResponse);

  rpc GetJobListingsForRecruiter (GetJobListingsForRecruiterRequest)
      returns (GetJobListingsForRecruiterResponse);

  rpc GetJobListingSkills (GetJobListingSkillsRequest)
      returns (GetJobListingSkillsResponse);

  rpc GetJobListingsByCity (GetJobListingsByCityRequest)
      returns (JobListingsResponse);

  rpc AddJobListingSkill (AddJobListingSkillRequest) returns (JobSkillResponse);
}


message CreateJobListingRequest {
  string title       = 1;
  string description = 2;
  string salary      = 3;
  int64 company_id   = 4;
  int64 posted_by_id = 5;
  string city        = 6;
  string postcode    = 7;
  string address     = 8;
}

message JobListingResponse {
  int64 id           = 1;
  string title       = 2;
  string description = 3;
  string date_posted = 4;
  string salary      = 5;
  string city        = 6;
  string postcode    = 7;
  string address     = 8;
  int64 company_id   = 9;
  int64 posted_by_id = 10;
}

message RemoveJobListingRequest {
  int64 id = 1; // Job-listing ID
}

message RemoveJobListingResponse {
  bool success = 1;
  string message = 2; // Optional
}

message GetJobListingsForCompanyRequest {
  int64 company_id = 1;
}

message GetJobListingsForCompanyResponse {
  repeated JobListingResponse job_listings = 1;
}

message GetJobListingsForRecruiterRequest {
  int64 recruiter_id = 1;
}

message GetJobListingsForRecruiterResponse {
  repeated JobListingResponse job_listings = 1;
}


message JobSkillResponse {
  int64 id       = 1;
  string priority = 2;
  int64 job_listing_id = 3;
  int64 skill_id       = 4;
  string skill_name    = 5;
}

message GetJobListingSkillsRequest {
  int64 job_listing_id = 1;
}

message GetJobListingSkillsResponse {
  repeated JobSkillResponse skills = 1;
}

message GetJobListingsByCityRequest {
  string cityName = 1;
}

message JobListingsResponse {
  repeated JobListingResponse listings = 1;
}

message AddJobListingSkillRequest {
  int64 job_listing_id = 1;
  string skill_name    = 2;
  string category      = 3;
  string priority      = 4;
}
